// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rush Component Clicking on cancel request takes user back to payment page 1`] = `
<DocumentFragment>
  <div
    class="ct-payment page"
  >
    <div
      class="content col-md-8"
    >
      <h1>
        Payment
      </h1>
      <div
        class="bcgov-display-box bcgov-success-background bcgov-no-padding-bottom"
      >
        <div
          class="bcgov-display-icon"
        >
          <div
            style="color: rgb(46, 133, 64);"
          >
            <svg
              fill="currentColor"
              height="32"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z"
              />
            </svg>
          </div>
        </div>
        <div
          class="bcgov-display-right-element"
        >
          <p>
            <span>
              You have a valid Credit Card registered with your CSO account.
            </span>
            <br />
            <span
              class="file-href"
              role="button"
              tabindex="0"
            >
              Register a new Credit Card.
            </span>
          </p>
        </div>
      </div>
      <br />
      <div
        class="half-width"
      >
        <div
          class="bcgov-table "
        >
          <b />
          <div
            class="bcgov-table-body"
          >
            <div
              class="bcgov-row-fees "
            >
              <div
                class="bcgov-fill-width"
              >
                Number of Documents in Package:
              </div>
              <div
                class="bcgov-table-value bcgov-right-align"
              >
                <b>
                  2
                </b>
              </div>
            </div>
            <div
              class="bcgov-row-fees "
            >
              <div
                class="bcgov-fill-width"
              >
                Statutory Fees:
              </div>
              <div
                class="bcgov-table-value bcgov-right-align"
              >
                <b>
                  $40.00
                </b>
              </div>
            </div>
            <div
              class="bcgov-row-fees "
            >
              <div
                class="bcgov-fill-width"
              >
                Submission Fee:
              </div>
              <div
                class="bcgov-table-value bcgov-right-align"
              >
                <b>
                  $25.50
                </b>
              </div>
            </div>
            <div
              class="bcgov-row-fees bcgov-empty-row"
            >
              <div
                class="bcgov-fill-width"
              />
              <div
                class="bcgov-table-value bcgov-right-align"
              />
            </div>
            <div
              class="bcgov-row-fees "
            >
              <div
                class="bcgov-fill-width"
              >
                Total Fee:
              </div>
              <div
                class="bcgov-table-value bcgov-right-align"
              >
                <b>
                  $65.50
                </b>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br />
      <h1>
        Package Submission Details
      </h1>
      <p>
        Your package will be filed to:
      </p>
      <div
        class="court-half-width"
      >
        <div
          class="bcgov-table "
        >
          <b />
          <div
            class="bcgov-table-body"
          >
            <div
              class="bcgov-row "
            >
              <div
                class="bcgov-fill-width"
              >
                Court File Number:
              </div>
              <div
                class="bcgov-table-value "
              >
                <b>
                  Court file number
                </b>
              </div>
            </div>
            <div
              class="bcgov-row "
            >
              <div
                class="bcgov-fill-width"
              >
                Location:
              </div>
              <div
                class="bcgov-table-value "
              >
                <b>
                  Court location
                </b>
              </div>
            </div>
            <div
              class="bcgov-row "
            >
              <div
                class="bcgov-fill-width"
              >
                Level and Class:
              </div>
              <div
                class="bcgov-table-value "
              >
                <b>
                  Level Class
                </b>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bcgov-callout-checkbox"
      >
        <p>
          I have reviewed the information and the documents in this filing
package and am prepared to submit them for filing. I agree that all fees for this filing package may be charged to the credit card registered to my account. Statutory fees will be processed when documents are filed.
        </p>
        <label
          for="agreeCallout"
          style="float: right;"
        >
          <input
            id="agreeCallout"
            type="checkbox"
          />
           
          <b>
            I agree
          </b>
          <span
            class="bcgov-mandatory"
            id="asterisk"
          >
            *
          </span>
        </label>
      </div>
      <br />
      <section
        class="pt-2 buttons"
      >
        <button
          class="bcgov-button bcgov-normal-white btn"
          data-testid=""
          type="button"
        >
          &lt; Back
        </button>
        <div
          class="button-container"
        >
          <button
            class="bcgov-button bcgov-normal-white btn"
            data-testid="main-cancel-btn"
            type="button"
          >
            Cancel
          </button>
          <button
            class="bcgov-button bcgov-normal-blue normal-blue-ml btn"
            data-testid=""
            disabled=""
            type="button"
          >
            Submit
          </button>
        </div>
      </section>
    </div>
    <div
      class="sidecard"
    >
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="rushSubmissionCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Rush/Urgent Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  If you wish to request that this package be submitted on an urgent (rush) basis, you must provide a reason for your request to be considered. 
                  <span
                    class="file-href"
                    role="button"
                    tabindex="0"
                  >
                    Request rush submission
                  </span>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="csoAccountDetailsCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Your CSO Account
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  CSO account 
                  <strong />
                   is linked to your Basic BCeID account 
                  <strong>
                    username
                  </strong>
                   and will be used to file documents. 
                  <a
                    href="https://dev.justice.gov.bc.ca/cso/accounts/editProfile.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View your CSO account details
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="aboutCsoCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    About E-File Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  E-File Submission is a service to help you securely and electronically file documents with the Courts of British Columbia via Court Services Online. 
                  <a
                    href="https://dev.justice.gov.bc.ca/cso/about/index.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about CSO
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Rush Component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ct-rush page"
  >
    <div
      class="content col-md-8"
    >
      <h1>
        Request Rush/Urgent Submission
      </h1>
      <p>
        You must provide a reason and contact information for your request for rush/urgent submission to be considered. My reason for requesting urgent (rush) filing is:
      </p>
      <label
        class="bcgov-radio"
        for="rule-85"
      >
        The attached application is made under Rule 8-5 (1) SCR.
        <input
          id="rule-85"
          name="rush-reason"
          type="radio"
        />
        <span
          class="bcgov-dot"
        />
      </label>
      <label
        class="bcgov-radio"
        for="court-directed"
      >
        The court directed that the order be processed on an urgent basis.
        <input
          id="court-directed"
          name="rush-reason"
          type="radio"
        />
        <span
          class="bcgov-dot"
        />
      </label>
      <label
        class="bcgov-radio"
        for="other"
      >
        Other (please explain).
        <input
          id="other"
          name="rush-reason"
          type="radio"
        />
        <span
          class="bcgov-dot"
        />
      </label>
      <div
        class="bcgov-callout"
      >
        <p>
          Please provide the date of when the direction was made,
the name of the Judge who made the direction along with any additional details
you feel are necessary.
        </p>
      </div>
      <div
        class="bcgov-input-label"
      >
        <label
          for="Date"
        >
          Date
        </label>
        <span
          class="bcgov-mandatory"
          id="asterisk"
        >
          *
        </span>
         
      </div>
      <div
        class="bcgov-flex"
      >
        <svg
          class="bcgov-move-right"
          fill="currentColor"
          height="32"
          size="32"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
          />
        </svg>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <input
              class=""
              type="text"
              value="05/14/2019"
            />
          </div>
        </div>
      </div>
      <br />
      <div
        class="bcgov-input-label"
      >
        <label
          for="detailed-reason"
        >
          Clear and detailed reason(s)
        </label>
        <span
          class="bcgov-mandatory"
          id="asterisk"
        >
          *
        </span>
         
      </div>
      <textarea
        class="bcgov-text-input"
        cols="60"
        id="detailed-reason"
        rows="8"
      />
      <p>
        I understand the registry has the discretion to reject this request.
      </p>
      <div
        class="form-parent"
      >
        <div
          class="form-child"
        >
          <div>
            <label
              class="bcgov-label"
              for="lastName"
            >
              <div
                class="bcgov-input-label"
              >
                Last Name
              </div>
              <span
                class="bcgov-mandatory"
                id="asterisk"
              >
                *
              </span>
               
              <span
                class="bcgov-note"
              />
            </label>
            <input
              class="bcgov-editable-white"
              id="lastName"
              type="text"
              value=""
            />
            <br />
            <span
              class="bcgov-error"
            />
          </div>
        </div>
        <div
          class="form-child"
        >
          <div>
            <label
              class="bcgov-label"
              for="org"
            >
              <div
                class="bcgov-input-label"
              >
                Organization
              </div>
               
              <span
                class="bcgov-note"
              />
            </label>
            <input
              class="bcgov-editable-white"
              id="org"
              type="text"
              value=""
            />
            <br />
            <span
              class="bcgov-error"
            />
          </div>
        </div>
      </div>
      <div
        class="form-parent"
      >
        <div
          class="form-child"
        >
          <div>
            <label
              class="bcgov-label"
              for="firstName"
            >
              <div
                class="bcgov-input-label"
              >
                First Name
              </div>
              <span
                class="bcgov-mandatory"
                id="asterisk"
              >
                *
              </span>
               
              <span
                class="bcgov-note"
              />
            </label>
            <input
              class="bcgov-editable-white"
              id="firstName"
              type="text"
              value=""
            />
            <br />
            <span
              class="bcgov-error"
            />
          </div>
        </div>
        <div
          class="form-child"
        >
          <div>
            <label
              class="bcgov-label"
              for="country"
            >
              <div
                class="bcgov-input-label"
              >
                Contact Country
              </div>
               
              <span
                class="bcgov-note"
              />
            </label>
            <input
              class="bcgov-editable-white"
              id="country"
              type="text"
              value=""
            />
            <br />
            <span
              class="bcgov-error"
            />
          </div>
        </div>
      </div>
      <div
        class="form-parent"
      >
        <div
          class="form-child"
        >
          <div>
            <label
              class="bcgov-label"
              for="phoneNumber"
            >
              <div
                class="bcgov-input-label"
              >
                Phone Number
              </div>
              <span
                class="bcgov-mandatory"
                id="asterisk"
              >
                *
              </span>
               
              <span
                class="bcgov-note"
              />
            </label>
            <input
              class="bcgov-editable-white"
              id="phoneNumber"
              type="text"
              value=""
            />
            <br />
            <span
              class="bcgov-error"
            />
          </div>
        </div>
      </div>
      <br />
      <div
        class="dropzone-outer"
        data-testid="dropdownzone"
        tabindex="0"
      >
        <div
          class="dropzone-inner-box"
        >
          <input
            autocomplete="off"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <span>
            <h2
              class="text-center-alignment"
            >
              Drag and drop or 
              <span
                class="file-href"
              >
                choose documents
              </span>
            </h2>
            <div>
              <span>
                to upload supporting documents from counsel that explain the reasons for an urgent/rush order.
              </span>
              <br />
              <span>
                Please note that documents uploaded on this screen will not be processed into your eFile.
              </span>
            </div>
          </span>
        </div>
      </div>
      <br />
      <section
        class="buttons pt-2"
      >
        <button
          class="bcgov-button bcgov-normal-white btn"
          data-testid=""
          type="button"
        >
          Cancel Request
        </button>
        <button
          class="bcgov-button bcgov-normal-blue btn"
          data-testid=""
          type="button"
        >
          Submit Request
        </button>
      </section>
    </div>
    <div
      class="sidecard"
    >
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="csoAccountDetailsCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Your CSO Account
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  CSO account 
                  <strong />
                   is linked to your Basic BCeID account 
                  <strong>
                    username
                  </strong>
                   and will be used to file documents. 
                  <a
                    href="https://dev.justice.gov.bc.ca/cso/accounts/editProfile.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View your CSO account details
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="aboutCsoCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    About E-File Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  E-File Submission is a service to help you securely and electronically file documents with the Courts of British Columbia via Court Services Online. 
                  <a
                    href="https://dev.justice.gov.bc.ca/cso/about/index.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about CSO
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
